fix whitespace formatting in search box on file load

--- a/media/regexworkbench.css
+++ b/media/regexworkbench.css
@@ -78,6 +78,7 @@ button.selected.vscode-high-contrast {
     background-color: var(--vscode-editor-background);
     color: var(--vscode-editor-foreground);
     border: 1px solid var(--vscode-button-foreground);
+    white-space: pre;
 }
 
 #replacement {
